tests/baselines/reference/emitArrowFunctionWhenUsingArguments07_ES6(strict=true).errors.txt
emitArrowFunctionWhenUsingArguments07_ES6.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments07_ES6.ts(1,12): error TS7006: Parameter 'arguments' implicitly has an 'any' type.
emitArrowFunctionWhenUsingArguments07_ES6.ts(2,14): error TS1100: Invalid use of 'arguments' in strict mode.
emitArrowFunctionWhenUsingArguments07_ES6.ts(2,14): error TS7006: Parameter 'arguments' implicitly has an 'any' type.


==== emitArrowFunctionWhenUsingArguments07_ES6.ts (4 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
               ~~~~~~~~~
!!! error TS7006: Parameter 'arguments' implicitly has an 'any' type.
        var a = (arguments) => () => arguments;
                 ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
                 ~~~~~~~~~
!!! error TS7006: Parameter 'arguments' implicitly has an 'any' type.
    }